0.13.3.AD (PRE_RELEASE):
-----------------------
- Amends `ScanAllESP` Feature
  * Now aligned with upstream implementation and scans all ESPs by default
  * Hence, the "Opt-Out" `decline_esp_filter` token has been replaced by an "Opt-In `enable_esp_filter` token
  * A previous issue where the token operated the wrong way round has been fixed


0.13.3.AC (06 Dec 2022):
-----------------------
- Adds `NvramProtectEx` Feature
  * Extends the `NvramProtect` feature (if set) to Mac OS and `Unknown` UEFI boots
  * The feature can be enabled using a new `nvram_protect_ex` configuration token
    - Replaces the `FocusNvramFix` feature which has been removed
    - Essentially restores the `EnableMacosFilter` feature previously replaced by `FocusNvramFix`
- Fixes `QueryVariableInfo` Handling
  * Now properly handled on `UEFI-Mac` units
  * The output is not currently presented however as Apple firmare does not return accurate information
- Fixes Misc Static Analysis Flags
  * Some are related to filesystem drivers; for which updated versions are created accordingly
- Improves 'SetVariable' Hook/Event Handling
  * Misc improvements including improved memory management
  * Relevant to the `NvramProtect` feature
- Improves Mac Recovery Tool Scan
  * Now skips some invalid entries such as APFS Recovery partitions
- Improves ScreenShot Feature
  * Now clears the keystroke buffer in `egScreenShot` to mitigate against stuck keys
- Improves Clean NVRAM Feature
  * Particularly regarding clearing OpenCore related variables
- Improves Time Bound Primed Buffer Mitigation
  * Rationalises intervention threshold
- Improves UI Element Scaling
  * Some units use a low resolution display for the boot stage that result in distorted UI
  * RefindPlus can now detect this and automatically scale UI elements down accordingly
  * Alternatively, users can use the `scale_ui` token to scale UI elements down
  * The threshold below which the display is considered `LoRez` is 1025px